fix：修复了因userAgent错误导致的，自带降噪无法使用的问题，

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "convbased-desktop",
-  "version": "1.2.0",
-  "description": "Convbased Desktop - 一个基于Electron的桌面应用程序，提供便捷的对话和交互功能",
+  "version": "1.3.0",
+  "description": "Convbased studio 的桌面应用端",
   "main": "main.js",
   "author": "Sakana",
   "homepage": "https://github.com/Sakana-yuyu/Convbased-desktop",
