--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convbased-desktop",
-  "version": "1.3.3",
+  "version": "1.4.0",
   "description": "Convbased studio 的桌面应用端",
   "main": "main.js",
   "author": "Sakana",
@@ -16,7 +16,11 @@
     "build": "electron-builder",
     "build-win": "electron-builder --win",
     "build-portable": "electron-builder --win --config.win.target=portable",
-    "dev": "electron . --dev"
+    "dev": "electron . --dev",
+    "release": "node scripts/release.js",
+    "release:patch": "npm version patch && npm run release",
+    "release:minor": "npm version minor && npm run release",
+    "release:major": "npm version major && npm run release"
   },
   "dependencies": {
     "electron-store": "^10.1.0",
