--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,13 +36,14 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Build and release
-      uses: samuelmeuli/action-electron-builder@v1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        release: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-        skip_build: true
-        use_vue_cli: false
+    - name: Build Electron app
+      run: |
+        if [ "${{ matrix.platform }}" = "win32" ]; then
+          npx electron-builder --win --publish never
+        else
+          npx electron-builder --mac --publish never
+        fi
+      shell: bash
       env:
         # 禁用 macOS 代码签名
         CSC_IDENTITY_AUTO_DISCOVERY: false
@@ -55,3 +56,13 @@ jobs:
         name: ${{ matrix.platform }}-build
         path: dist/
         retention-days: 5
+        
+    - name: Create Release
+      if: startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch'
+      uses: softprops/action-gh-release@v1
+      with:
+        files: dist/*
+        draft: true
+        generate_release_notes: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
